# MacroFusion

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
include/core/: config.h  device_storage.cuh  frame_constants.cuh  math_types.cuh  viewer.h  volume.h
include/macro_fusion/core/: config.h  math_types.h  tracking.h
include/macro_fusion/cuda/: device_storage.cuh  frame_constants.cuh
include/macro_fusion/modules/: frame_source.h  preprocess.h  render.h
include/modules/: frame_source.h  integration.h  macro_cells.h  pipeline.h  preprocess.h  preprocess_cuda.cuh  raycast.h  render.h  render_cuda.cuh  tracking.h
scripts/: download_tum_dataset.sh
src/: main.cpp
src/core/: frame_constants.cu  viewer.cpp
src/cuda/: frame_constants.cu
src/modules/: integration.cu  macro_cells.cpp  pipeline.cu  preprocess.cpp  preprocess_cuda.cu  raycast.cu  render.cpp  render_cuda.cu  tum_frame_source.cpp
tests/: CMakeLists.txt  frame_source_test.cpp  preprocess_test.cpp  render_test.cpp  smoke_test.cpp
